--- a/LoginRegister.HTML
+++ b/LoginRegister.HTML
@@ -16,6 +16,10 @@
             <div class="Formulario">
                 <h1 id="Titulo">Registrarse</h1>
                 <form action="">
+                    <div class="Campo-Boton">
+                        <button type="button" id="Registro">Registrarse</button>
+                        <button type="button" id="IniciarSesion" class="Disable">Iniciar Sesión</button>
+                    </div>
                     <div class="Grupo-Entradas">
                         <div class="Campo-Entradas" id="CampoNombre">
                             <i class="fa-solid fa-user"></i>
@@ -33,9 +37,10 @@
                         </div>
                         <p>Olvidaste tu contraseña? <a href="#">Haz click aqui!</a></p>
                     </div>
-                    <div class="Campo-Boton">
-                        <button type="button" id="Registro">Registrarse</button>
-                        <button type="button" id="IniciarSesion" class="Disable">Iniciar Sesión</button>
+
+                    <div class="Boton-Accion">
+                        <button type="button" id="Ingresar" class="Ocultar">Iniciar Sesión</button>
+                        <button type="button" id="Registrarse">Registrarse</button>
                     </div>
                 </form>
             </div>
